[project]
name = "reflexion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "python-dotenv>=1.2.2",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "tavily-python>=0.3.0",
]
